<resources>
    <string name="app_name">熊欢欢2018110350</string>
    <string name="second_activity">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="input_something">input something</string>
    <string name="confirm">确定</string>
    <string name="photo">拍照</string>
    <string name="fourth_activity">Fourth Activity</string>
    <string name="timer">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="fifth_activity">Fifth Activity</string>
</resources>